--- a/site/.eslintrc.json
+++ b/site/.eslintrc.json
@@ -22,6 +22,10 @@
         "SwitchCase": 1
       }
     ],
+    "multiline-ternary": [
+      "error",
+      "always-multiline"
+    ],
     "object-curly-spacing": [
       "error",
       "always"
